--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "famx",
   "version": "0.0.0",
   "description": "Hello Expo!",
-  "author": null,
+  "author": "famX",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
