--- a/package.json
+++ b/package.json
@@ -6,10 +6,17 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "add-graphql-subscriptions": "^1.0.1",
+    "apollo-cache-inmemory": "^1.1.0",
+    "apollo-client": "^2.0.2",
+    "apollo-link-http": "^1.1.0",
     "expo": "^22.0.0",
+    "graphql": "^0.11.7",
     "react": "16.0.0-beta.5",
+    "react-apollo": "^2.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
-    "react-navigation": "^1.0.0-beta.19"
+    "react-navigation": "^1.0.0-beta.19",
+    "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
