--- a/.eslintrc
+++ b/.eslintrc
@@ -54,6 +54,7 @@
     "new-cap": 0,
     "consistent-return": 0,
     "no-param-reassign": 0,
+    "no-underscore-dangle": 0,
     "comma-dangle": 0,
     "curly": [
       1,
