--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apollo-link-http": "^1.1.0",
     "expo": "^22.0.0",
     "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
     "react": "16.0.0-beta.5",
     "react-apollo": "^2.0.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
