--- a/.eslintrc
+++ b/.eslintrc
@@ -56,6 +56,7 @@
     "no-param-reassign": 0,
     "no-underscore-dangle": 0,
     "comma-dangle": 0,
+    "prefer-template": 0,
     "curly": [
       1,
       "multi-line"
