--- a/server/.graphcoolrc
+++ b/server/.graphcoolrc
@@ -1,3 +1,3 @@
 targets:
-  fambip: shared-eu-west-1/cja2pjayb9wjy0104wwsvcue4
-  default: fambip
+  prod: shared-eu-west-1/cja3tdjhj3zhr018235lgw8ef
+  default: prod
