--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "@expo/vector-icons": "^6.2.0",
     "add-graphql-subscriptions": "^1.0.1",
     "apollo-cache-inmemory": "^1.1.0",
     "apollo-client": "^2.0.2",
@@ -15,14 +16,17 @@
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "lodash": "^4.17.4",
+    "native-base": "^2.3.3",
     "react": "16.0.0-beta.5",
     "react-apollo": "^2.0.1",
+    "react-dom": "^16.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
     "react-native-clean-form": "^0.4.2",
     "react-native-elements": "^0.18.2",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "^1.0.0-beta.19",
     "react-redux": "^5.0.6",
+    "react-widgets": "^4.1.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
