--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql-tag": "^2.5.0",
     "lodash": "^4.17.4",
     "native-base": "^2.3.3",
+    "nodemailer": "^4.4.0",
     "react": "16.0.0-beta.5",
     "react-apollo": "^2.0.1",
     "react-dom": "^16.1.1",
@@ -30,7 +31,8 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-form": "^7.1.2",
-    "subscriptions-transport-ws": "^0.9.1"
+    "subscriptions-transport-ws": "^0.9.1",
+    "validator": "^9.1.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.2",
