edit eslint rules

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,26 +14,11 @@
       "jsx": true
     }
   },
-  "settings": {
-    "import/resolver": {
-      "webpack": {
-        "config": {
-          "resolve": {
-            "extensions": [
-              ".js",
-              ".jsx"
-            ]
-          }
-        }
-      }
-    }
-  },
   "env": {
     "browser": true,
     "node": true,
     "es6": true,
-    "mocha": true,
-    "jquery": true
+    "mocha": true
   },
   "globals": {
     "sinon": true,
@@ -42,10 +27,12 @@
   "rules": {
     "import/no-unresolved": [0],
     "import/named": 0,
-    "import/extensions": 0,
+    "import/extensions": [".js", ".jsx"],
     "import/no-extraneous-dependencies": [
       "error", {
-        "devDependencies": true, "optionalDependencies": true, "peerDependencies": true
+        "devDependencies": true,
+        "optionalDependencies": true,
+        "peerDependencies": true
       }
     ],
     "class-methods-use-this": 0,
@@ -92,18 +79,14 @@
     "react/jsx-indent-props": 0,
     "react/jsx-key": 1,
     "react/jsx-max-props-per-line": 0,
-    // "react/jsx-no-bind": 1,
     "react/jsx-no-duplicate-props": 1,
     "react/jsx-no-literals": 0,
     "react/jsx-no-undef": 1,
-    "react/jsx-pascal-case": 1,
     "react/jsx-sort-prop-types": 0,
     "react/jsx-sort-props": 0,
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
     "react/no-danger": 1,
-    "react/no-did-mount-set-state": 1,
-    "react/no-did-update-set-state": 1,
     "react/no-direct-mutation-state": 1,
     "react/no-multi-comp": 1,
     "react/no-set-state": 0,
