--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,7 @@
   "rules": {
     "import/no-unresolved": [0],
     "import/named": 0,
-    "import/extensions": [".js", ".jsx"],
+    "import/extensions": 0,
     "import/no-extraneous-dependencies": [
       "error", {
         "devDependencies": true,
@@ -87,6 +87,8 @@
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
     "react/no-danger": 1,
+    "react/no-did-mount-set-state": 1,
+    "react/no-did-update-set-state": 1,
     "react/no-direct-mutation-state": 1,
     "react/no-multi-comp": 1,
     "react/no-set-state": 0,
