--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lodash": "^4.17.4",
     "native-base": "^2.3.3",
     "nodemailer": "^4.4.0",
-    "react": "16.0.0-beta.5",
+    "react": "^16.1.1",
     "react-apollo": "^2.0.1",
     "react-dom": "^16.1.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-22.0.1.tar.gz",
