--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "famX",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "lint": "eslint ./ || true"
+  },
   "dependencies": {
     "@expo/vector-icons": "^6.2.0",
     "add-graphql-subscriptions": "^1.0.1",
